--- a/datafiles/lang/en.json
+++ b/datafiles/lang/en.json
@@ -1,16 +1,16 @@
 {
-    "lang" : "zh-cn",
-    "title" : "简体中文",
+    "lang" : "en",
+    "title" : "English",
     "content" : {
-        "title_new_project" : "项目创建",
-        "title_start_page" : "开始页面",
-        "button_project_create" : "新建项目",
-        "button_project_open" : "打开已有项目",
-        "button_goback" : "返回上一页",
-        "button_project_create_confirm" : "创建项目",
-        "input_music_file" : "音乐文件 *",
-        "input_bg_file" : "背景文件",
-        "input_chart_file" : "导入谱面文件",
+        "title_new_project" : "Project Initialization",
+        "title_start_page" : "Start Page",
+        "button_project_create" : "Project Create",
+        "button_project_open" : "Project Open",
+        "button_goback" : "Back to last page",
+        "button_project_create_confirm" : "Create Project",
+        "input_music_file" : "Music File *",
+        "input_bg_file" : "Background File",
+        "input_chart_file" : "Import Chart File",
         "input_leftType" : "左侧下落类型",
         "input_rightType" : "右侧下落类型",
         "input_difficulty" : "谱面难度",
@@ -24,8 +24,6 @@
         "autoupdate_warn" : "未收取到 DyNode 的任何正式版本。",
         "autoupdate_err" : "更新检查错误。请检查与 Github 页面的网络连通性。",
         "autoupdate_found_1" : "收取到新版本 DyNode：",
-        "autoupdate_found_2" : "前往更新页面",
-        "anno_prefix_warn" : "警告",
-        "anno_prefix_err" : "错误"
+        "autoupdate_found_2" : "前往更新页面"
     }
 }
