--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -19,13 +19,54 @@
         "FMOD_load_err" : "FMOD 未能正确加载。所有音乐相关功能将无法正常运作。请检查文件完整性。",
         "FMOD_create_sys_err" : "FMOD 创建系统失败。\n 错误信息：",
         "autosave_complete" : "自动保存项目完毕。",
+        "autosave_enable" : "自动保存已开启。",
+        "autosave_disable" : "自动保存已关闭。",
         "fullscreen_warn" : "在全屏模式下使用会弹出窗口的功能键是危险的操作,某些情况下可能会导致程序无法响应或谱面丢失。这个问题暂时无法修复。请关闭全屏或使用自动保存功能。",
         "screenshot_save" : "已保存截图到:",
         "autoupdate_warn" : "未收取到 DyNode 的任何正式版本。",
         "autoupdate_err" : "更新检查错误。请检查与 Github 页面的网络连通性。",
         "autoupdate_found_1" : "收取到新版本 DyNode：",
         "autoupdate_found_2" : "前往更新页面",
+        "anno_project_load_complete" : "打开项目完毕。",
+        "anno_project_save_complete" : "项目保存完毕。",
         "anno_prefix_warn" : "警告",
-        "anno_prefix_err" : "错误"
+        "anno_prefix_err" : "错误",
+        "anno_adjust_enabled" : "开启",
+        "anno_adjust_disabled" : "关闭",
+        "anno_debug_info" : "调试信息",
+        "anno_show_bar" : "以 Bar 代替 Time 显示",
+        "anno_show_bar_warn" : "你还未设置全局 Bar Per Minute 与 Offset 。无法切换 Bar/Time 显示。\n使用 F6 即可进行设置。",
+        "anno_hide_scoreboard" : "编辑模式下隐藏分数显示",
+        "anno_particles_effect" : "粒子效果",
+        "anno_hitsound" : "打击音",
+        "anno_switch_sidetype" : "切换侧面类型至：",
+        "anno_switch_sidetype_warn" : "你只有正在编辑侧面才可以切换侧面类型。",
+        "anno_fade_other_notes" : "透明化非编辑侧音符",
+        "anno_music_speed" : "音乐倍速",
+        "anno_note_speed" : "下落速度",
+        "anno_note_speed_warn" : "你现在的下落速度为：x0.2。过低的下落速度可能导致严重的性能问题。",
+        "anno_switch_theme_to" : "已切换到主题",
+        "anno_export_complete" : "谱面导出完毕。",
+        "anno_music_load_complete" : "音乐加载完毕。",
+        "old_version_warn_1" : "检测到来自特定旧版本的项目。\n该谱面是否使用了从 .osu 中导入校时信息并添加了 64ms 的延迟？\n这个延迟在新的版本中建议被撤销。如果你选择“是”，则所有放置的 Note 和 Timing Point 都会被提前 64ms 。\n在调整之前我们建议你先对 .dyn 文件进行备份。你也可以在之后手动进行调整。\n这个警告不会出现第二遍。",
+        "new_project_warn" : "确定要创建新的工程吗？所有未保存的更改都将丢失。",
+        "box_add_offset" : "请输入你想要添加的全局时间偏移量（以毫秒记，正数代表增加延迟）。这将会影响所有的 Timing Points 和 Notes 所在的时间。",
+        "anno_add_offset_complete" : "全局时间偏移添加完毕。",
+        "box_set_global_bar_1" : "请输入自定义的全局 Bar Per Minute",
+        "box_set_global_bar_2" : "请输入用于 Bar 显示与导出的全局 Offset （毫秒）",
+        "anno_set_global_bar_complete" : "已更改全局 BarPM 与 Offset 至",
+        "anno_graph_not_exists" : "图片文件不存在。\n[scale, 0.8]路径：",
+        "anno_graph_load_err" : "图片文件读取失败。图片可能过大或损坏。",
+        "anno_music_load_err" : "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息：",
+        "anno_import_info_complete" : "导入谱面信息完毕。",
+        "box_set_chart_title" : "请输入新的谱面标题",
+        "box_q_osu_import_objects" : "是否导入 .osu 中的物件？（要进行转谱吗？）",
+        "box_q_clear_objects" : "是否清除所有原谱面物件？此操作不可撤销！",
+        "box_q_import_dymm_bpm" : "是否导入 Dynamaker Modified 谱面文件中的变 BPM 数据？",
+        "anno_chart_not_exists" : "谱面文件不存在。导入中止。",
+        "box_q_import_confirm" : "确认导入谱面？所有操作将不可撤销。",
+        "box_q_import_clear" : "是否清除所有原谱面物件？",
+        "box_q_import_info" : "是否导入谱面信息（标题、难度、Timing等）？",
+        "anno_import_chart_complete" : "导入谱面完毕。"
     }
 }
