note depth fixed minor changes

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -17,7 +17,7 @@
         "input_title" : "谱面标题",
         "input_title_desc" : "请输入谱面标题",
         "FMOD_load_err" : "FMOD 未能正确加载。所有音乐相关功能将无法正常运作。请检查文件完整性。",
-        "FMOD_create_sys_err" : "FMOD 创建系统失败。\n 错误信息：",
+        "FMOD_create_sys_err" : "FMOD 创建系统失败。\n 错误信息: ",
         "autosave_complete" : "自动保存项目完毕。",
         "autosave_enable" : "自动保存已开启。",
         "autosave_disable" : "自动保存已关闭。",
@@ -25,7 +25,7 @@
         "screenshot_save" : "已保存截图到:",
         "autoupdate_warn" : "未收取到 DyNode 的任何正式版本。",
         "autoupdate_err" : "更新检查错误。请检查与 Github 页面的网络连通性。",
-        "autoupdate_found_1" : "收取到新版本 DyNode：",
+        "autoupdate_found_1" : "收取到新版本 DyNode: ",
         "autoupdate_found_2" : "前往更新页面",
         "anno_project_load_complete" : "打开项目完毕。",
         "anno_project_save_complete" : "项目保存完毕。",
@@ -39,12 +39,12 @@
         "anno_hide_scoreboard" : "编辑模式下隐藏分数显示",
         "anno_particles_effect" : "粒子效果",
         "anno_hitsound" : "打击音",
-        "anno_switch_sidetype" : "切换侧面类型至：",
+        "anno_switch_sidetype" : "切换侧面类型至: ",
         "anno_switch_sidetype_warn" : "你只有正在编辑侧面才可以切换侧面类型。",
         "anno_fade_other_notes" : "透明化非编辑侧音符",
         "anno_music_speed" : "音乐倍速",
         "anno_note_speed" : "下落速度",
-        "anno_note_speed_warn" : "你现在的下落速度为：x0.2。过低的下落速度可能导致严重的性能问题。",
+        "anno_note_speed_warn" : "你现在的下落速度为: x0.2。过低的下落速度可能导致严重的性能问题。",
         "anno_switch_theme_to" : "已切换到主题",
         "anno_export_complete" : "谱面导出完毕。",
         "anno_music_load_complete" : "音乐加载完毕。",
@@ -55,9 +55,9 @@
         "box_set_global_bar_1" : "请输入自定义的全局 Bar Per Minute",
         "box_set_global_bar_2" : "请输入用于 Bar 显示与导出的全局 Offset （毫秒）",
         "anno_set_global_bar_complete" : "已更改全局 BarPM 与 Offset 至",
-        "anno_graph_not_exists" : "图片文件不存在。\n[scale, 0.8]路径：",
+        "anno_graph_not_exists" : "图片文件不存在。\n[scale, 0.8]路径: ",
         "anno_graph_load_err" : "图片文件读取失败。图片可能过大或损坏。",
-        "anno_music_load_err" : "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息：",
+        "anno_music_load_err" : "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息: ",
         "anno_import_info_complete" : "导入谱面信息完毕。",
         "box_set_chart_title" : "请输入新的谱面标题",
         "box_q_osu_import_objects" : "是否导入 .osu 中的物件？（要进行转谱吗？）",
