feat: Add function to input default width
with keyboard

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -59,6 +59,7 @@
         "anno_music_load_err" : "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息: ",
         "anno_import_info_complete" : "导入谱面信息完毕。",
         "box_set_chart_title" : "请输入新的谱面标题",
+        "box_set_change_default_width": "请输入你想设置的默认宽度值",
         "box_q_osu_import_objects" : "是否导入 .osu 中的物件？（要进行转谱吗？）",
         "box_q_clear_objects" : "是否清除所有原谱面物件？此操作不可撤销！",
         "box_q_import_dymm_bpm" : "是否导入 Dynamaker Modified 谱面文件中的变 BPM 数据？",
@@ -82,6 +83,7 @@
         "default_width_mode_name_3": "正侧面分离",
         "default_width_mode_name_4": "三面分离",
         "default_width_mode": "宽度设置模式",
+        "anno_default_width": "设置默认宽度为",
         "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。"
     }
 }
