--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -84,6 +84,7 @@
         "default_width_mode_name_4": "三面分离",
         "default_width_mode": "宽度设置模式",
         "anno_default_width": "设置默认宽度为",
-        "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。"
+        "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。",
+        "anno_reload_config": "配置已重载。一部分配置可能需要重启游戏来生效。"
     }
 }
