chore: Change start page hint text to i18n

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -85,6 +85,7 @@
         "default_width_mode": "宽度设置模式",
         "anno_default_width": "设置默认宽度为",
         "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。",
-        "anno_reload_config": "配置已重载。一部分配置可能需要重启游戏来生效。"
+        "anno_reload_config": "配置已重载。一部分配置可能需要重启游戏来生效。",
+        "start_page_hint": "F7: 切换无边框全屏\nF12: 查看全部快捷键\nDyNode目前仅支持1920x1080的渲染分辨率。"
     }
 }
