--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -1,91 +1,119 @@
 {
-    "lang" : "zh-cn",
-    "title" : "简体中文",
-    "content" : {
-        "title_new_project" : "项目创建",
-        "title_start_page" : "开始页面",
-        "button_project_create" : "新建项目",
-        "button_project_open" : "打开已有项目",
-        "button_goback" : "返回上一页",
-        "button_project_create_confirm" : "创建项目",
-        "input_music_file" : "音乐文件 *",
-        "input_bg_file" : "背景文件",
-        "input_chart_file" : "导入谱面文件",
-        "input_leftType" : "左侧下落类型",
-        "input_rightType" : "右侧下落类型",
-        "input_difficulty" : "谱面难度",
-        "input_title" : "谱面标题",
-        "input_title_desc" : "请输入谱面标题",
-        "FMOD_load_err" : "FMOD 未能正确加载。所有音乐相关功能将无法正常运作。请检查文件完整性。",
-        "FMOD_create_sys_err" : "FMOD 创建系统失败。\n 错误信息: ",
-        "autosave_complete" : "自动保存项目完毕。",
-        "autosave_enable" : "自动保存已开启。",
-        "autosave_disable" : "自动保存已关闭。",
-        "screenshot_save" : "已保存截图到:",
-        "autoupdate_warn" : "未收取到 DyNode 的任何正式版本。",
-        "autoupdate_err" : "更新检查错误。请检查与 Github 页面的网络连通性。",
-        "autoupdate_found_1" : "收取到新版本 DyNode: ",
-        "autoupdate_found_2" : "前往更新页面",
-        "anno_project_load_complete" : "打开项目完毕。",
-        "anno_project_save_complete" : "项目保存完毕。",
-        "anno_prefix_warn" : "警告",
-        "anno_prefix_err" : "错误",
-        "anno_adjust_enabled" : "开启",
-        "anno_adjust_disabled" : "关闭",
-        "anno_debug_info" : "调试信息",
-        "anno_show_bar" : "以 Bar 代替 Time 显示",
-        "anno_show_bar_warn" : "你还未设置全局 Bar Per Minute 与 Offset 。无法切换 Bar/Time 显示。\n使用 F6 即可进行设置。",
-        "anno_hide_scoreboard" : "编辑模式下隐藏分数显示",
-        "anno_particles_effect" : "粒子效果",
-        "anno_hitsound" : "打击音",
-        "anno_switch_sidetype" : "切换侧面类型至: ",
-        "anno_switch_sidetype_warn" : "你只有正在编辑侧面才可以切换侧面类型。",
-        "anno_fade_other_notes" : "透明化非编辑侧音符",
-        "anno_music_speed" : "音乐倍速",
-        "anno_note_speed" : "下落速度",
-        "anno_note_speed_warn" : "你现在的下落速度为: x0.2。过低的下落速度可能导致严重的性能问题。",
-        "anno_switch_theme_to" : "已切换到主题",
-        "anno_export_complete" : "谱面导出完毕。",
-        "anno_music_load_complete" : "音乐加载完毕。",
-        "old_version_warn_1" : "检测到来自特定旧版本的项目。\n该谱面是否使用了从 .osu 中导入校时信息并添加了 64ms 的延迟？\n这个延迟在新的版本中建议被撤销。如果你选择“是”，则所有放置的 Note 和 Timing Point 都会被提前 64ms 。\n在调整之前我们建议你先对 .dyn 文件进行备份。你也可以在之后手动进行调整。\n这个警告不会出现第二遍。",
-        "new_project_warn" : "确定要创建新的工程吗？所有未保存的更改都将丢失。",
-        "box_add_offset" : "请输入你想要添加的全局时间偏移量（以毫秒记，正数代表增加延迟）。这将会影响所有的 Timing Points 和 Notes 所在的时间。",
-        "anno_add_offset_complete" : "全局时间偏移添加完毕。",
-        "box_set_global_bar_1" : "请输入自定义的全局 Bar Per Minute",
-        "box_set_global_bar_2" : "请输入用于 Bar 显示与导出的全局 Offset （毫秒）",
-        "anno_set_global_bar_complete" : "已更改全局 BarPM 与 Offset 至",
-        "anno_graph_not_exists" : "图片文件不存在。\n[scale, 0.8]路径: ",
-        "anno_graph_load_err" : "图片文件读取失败。图片可能过大或损坏。",
-        "anno_music_load_err" : "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息: ",
-        "anno_import_info_complete" : "导入谱面信息完毕。",
-        "box_set_chart_title" : "请输入新的谱面标题",
-        "box_set_change_default_width": "请输入你想设置的默认宽度值",
-        "box_q_osu_import_objects" : "是否导入 .osu 中的物件？（要进行转谱吗？）",
-        "box_q_clear_objects" : "是否清除所有原谱面物件？此操作不可撤销！",
-        "box_q_import_dymm_bpm" : "是否导入 Dynamaker Modified 谱面文件中的变 BPM 数据？",
-        "anno_chart_not_exists" : "谱面文件不存在。导入中止。",
-        "box_q_import_confirm" : "确认导入谱面？所有操作将不可撤销。",
-        "box_q_import_clear" : "是否清除所有原谱面物件？",
-        "box_q_import_info" : "是否导入谱面信息（标题、难度、Timing等）？",
-        "anno_import_chart_complete" : "导入谱面完毕。",
-        "confirm_close" : "确定要退出吗？所有未保存的进度将会丢失。",
-        "anno_editside_switch" : "编辑侧切换至",
-        "editside_down" : "正面",
-        "editside_left" : "左侧",
-        "editside_right" : "右侧",
-        "fileformat_chart": "支持的谱面文件",
-        "timing_point_create_with_note_question": "检测到你已经选择一个 Note，它的时间是：$0 ms。要以这个时间作为 offset 吗？",
-        "export_fix_decimal_question": "导出时是否将导出的时间转换为整数毫秒？\n如果你仅将此导出谱面用于测试或发布则我们建议选择“是”。",
-        "export_timing_error": "你还没有配置 Timing ，因此无法导出谱面。",
-        "anno_simplify": "简化模式",
-        "default_width_mode_name_1": "宽度一致",
-        "default_width_mode_name_2": "视觉一致",
-        "default_width_mode_name_3": "正侧面分离",
-        "default_width_mode_name_4": "三面分离",
-        "default_width_mode": "宽度设置模式",
-        "anno_default_width": "设置默认宽度为",
-        "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。",
-        "anno_reload_config": "配置已重载。一部分配置可能需要重启游戏来生效。",
-        "start_page_hint": "F7: 切换无边框全屏\nF12: 查看全部快捷键\nDyNode目前仅支持1920x1080的渲染分辨率。"
-    }
+  "lang": "zh-cn",
+  "title": "简体中文",
+  "content": {
+    "title_new_project": "项目创建",
+    "title_start_page": "开始页面",
+    "button_project_create": "新建项目",
+    "button_project_open": "打开已有项目",
+    "button_goback": "返回上一页",
+    "button_project_create_confirm": "创建项目",
+    "input_music_file": "音乐文件 *",
+    "input_bg_file": "背景文件",
+    "input_chart_file": "导入谱面文件",
+    "input_leftType": "左侧下落类型",
+    "input_rightType": "右侧下落类型",
+    "input_difficulty": "谱面难度",
+    "input_title": "谱面标题",
+    "input_title_desc": "请输入谱面标题",
+    "FMOD_load_err": "FMOD 未能正确加载。所有音乐相关功能将无法正常运作。请检查文件完整性。",
+    "FMOD_create_sys_err": "FMOD 创建系统失败。\n 错误信息: ",
+    "autosave_complete": "自动保存项目完毕。",
+    "autosave_enable": "自动保存已开启。",
+    "autosave_disable": "自动保存已关闭。",
+    "screenshot_save": "已保存截图到:",
+    "autoupdate_warn": "未收取到 DyNode 的任何正式版本。",
+    "autoupdate_err": "更新检查错误。请检查与 Github 页面的网络连通性。",
+    "autoupdate_found_1": "收取到新版本 DyNode: ",
+    "autoupdate_found_2": "前往更新页面",
+    "anno_project_load_complete": "打开项目完毕。",
+    "anno_project_save_complete": "项目保存完毕。",
+    "anno_prefix_warn": "警告",
+    "anno_prefix_err": "错误",
+    "anno_adjust_enabled": "开启",
+    "anno_adjust_disabled": "关闭",
+    "anno_debug_info": "调试信息",
+    "anno_show_bar": "以 Bar 代替 Time 显示",
+    "anno_show_bar_warn": "你还未设置全局 Bar Per Minute 与 Offset 。无法切换 Bar/Time 显示。\n使用 F6 即可进行设置。",
+    "anno_hide_scoreboard": "编辑模式下隐藏分数显示",
+    "anno_particles_effect": "粒子效果",
+    "anno_hitsound": "打击音",
+    "anno_switch_sidetype": "切换侧面类型至: ",
+    "anno_switch_sidetype_warn": "你只有正在编辑侧面才可以切换侧面类型。",
+    "anno_fade_other_notes": "透明化非编辑侧音符",
+    "anno_music_speed": "音乐倍速",
+    "anno_note_speed": "下落速度",
+    "anno_note_speed_warn": "你现在的下落速度为: x0.2。过低的下落速度可能导致严重的性能问题。",
+    "anno_switch_theme_to": "已切换到主题",
+    "anno_export_complete": "谱面导出完毕。",
+    "anno_music_load_complete": "音乐加载完毕。",
+    "old_version_warn_1": "检测到来自特定旧版本的项目。\n该谱面是否使用了从 .osu 中导入校时信息并添加了 64ms 的延迟？\n这个延迟在新的版本中建议被撤销。如果你选择“是”，则所有放置的 Note 和 Timing Point 都会被提前 64ms 。\n在调整之前我们建议你先对 .dyn 文件进行备份。你也可以在之后手动进行调整。\n这个警告不会出现第二遍。",
+    "new_project_warn": "确定要创建新的工程吗？所有未保存的更改都将丢失。",
+    "box_add_offset": "请输入你想要添加的全局时间偏移量（以毫秒记，正数代表增加延迟）。这将会影响所有的 Timing Points 和 Notes 所在的时间。",
+    "anno_add_offset_complete": "全局时间偏移添加完毕。",
+    "box_set_global_bar_1": "请输入自定义的全局 Bar Per Minute",
+    "box_set_global_bar_2": "请输入用于 Bar 显示与导出的全局 Offset （毫秒）",
+    "anno_set_global_bar_complete": "已更改全局 BarPM 与 Offset 至",
+    "anno_graph_not_exists": "图片文件不存在。\n[scale, 0.8]路径: ",
+    "anno_graph_load_err": "图片文件读取失败。图片可能过大或损坏。",
+    "anno_music_load_err": "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息: ",
+    "anno_import_info_complete": "导入谱面信息完毕。",
+    "box_set_chart_title": "请输入新的谱面标题",
+    "box_set_change_default_width": "请输入你想设置的默认宽度值",
+    "box_q_osu_import_objects": "是否导入 .osu 中的物件？（要进行转谱吗？）",
+    "box_q_clear_objects": "是否清除所有原谱面物件？此操作不可撤销！",
+    "box_q_import_dymm_bpm": "是否导入 Dynamaker Modified 谱面文件中的变 BPM 数据？",
+    "anno_chart_not_exists": "谱面文件不存在。导入中止。",
+    "box_q_import_confirm": "确认导入谱面？所有操作将不可撤销。",
+    "box_q_import_clear": "是否清除所有原谱面物件？",
+    "box_q_import_info": "是否导入谱面信息（标题、难度、Timing等）？",
+    "anno_import_chart_complete": "导入谱面完毕。",
+    "confirm_close": "确定要退出吗？所有未保存的进度将会丢失。",
+    "anno_editside_switch": "编辑侧切换至",
+    "editside_down": "正面",
+    "editside_left": "左侧",
+    "editside_right": "右侧",
+    "fileformat_chart": "支持的谱面文件",
+    "timing_point_create_with_note_question": "检测到你已经选择一个 Note，它的时间是: $0 ms。要以这个时间作为 offset 吗？",
+    "export_fix_decimal_question": "导出时是否将导出的时间转换为整数毫秒？\n如果你仅将此导出谱面用于测试或发布则我们建议选择“是”。",
+    "export_timing_error": "你还没有配置 Timing ，因此无法导出谱面。",
+    "anno_simplify": "简化模式",
+    "default_width_mode_name_1": "宽度一致",
+    "default_width_mode_name_2": "视觉一致",
+    "default_width_mode_name_3": "正侧面分离",
+    "default_width_mode_name_4": "三面分离",
+    "default_width_mode": "宽度设置模式",
+    "anno_default_width": "设置默认宽度为",
+    "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。",
+    "anno_reload_config": "配置已重载。一部分配置可能需要重启游戏来生效。",
+    "start_page_hint": "F7: 切换无边框全屏\nF12: 查看全部快捷键\nDyNode目前仅支持1920x1080的渲染分辨率。",
+    "error_dym_bpm_load_failed": "未能读取谱面中的变 BPM 信息。\n建议使用最新版本 Dynamaker-modified 来导出谱面的变 BPM 数据。",
+    "error_default_width_must_be_real": "输入的默认宽度必须是一个实数。",
+    "undo": "撤销操作 共 $0 处",
+    "redo": "还原操作 共 $0 处",
+    "tpc_extra_question": "检测到你已经选择一个 Note，它的时间是: $0 ms。要以这个时间作为 offset 吗？",
+    "tpc_q1": "请输入该 Timing Point 的 offset（毫秒）: ",
+    "tpc_q2": "请输入 BPM : ",
+    "tpc_q3": "请输入节拍（x/4）: ",
+    "add_timing_point": "添加 Timing Point 至时间 $0 处\nBPM: $1\n节拍: $2/4",
+    "remove_timing_point": "删除位于时间 $0 处的 Timing Point\nBPM: $1\n节拍: $2/4",
+    "copy_timing_point": "复制末尾 Timing Point 至时间 $0 处\nBPM: $1\n节拍: $2/4",
+    "error_no_timing_point": "你没有设置任何 Timing Point 。需按 Y 键放置至少一个 Timing Point 。",
+    "beatline_divs": "节拍细分:  1/$0\n节拍细分组: $1",
+    "warning_note_outbound": "你正在放置一个中心超出屏幕的音符。\n该音符可能在屏幕内不可见，并且之后将因此无法编辑。\n你可以使用撤销来退回上一步操作。",
+    "copy_width": "复制宽度: $0",
+    "adjust_grid_y": "时间方向网格吸附",
+    "adjust_grid_x": "位置方向网格吸附",
+    "adjust_highlight": "时间/位置高亮显示",
+    "notes_mirror": "镜像音符共 $0 处",
+    "notes_mirror_copy": "镜像复制音符共 $0 处",
+    "notes_rotate": "侧面对称音符共 $0 处",
+    "warning_notes_rotate": "仅侧面音符能够被对称。",
+    "notes_rotate_copy": "侧面对称复制音符共 $0 处",
+    "warning_notes_rotate_copy": "仅侧面音符能够被对称复制。",
+    "notes_set_width": "设置宽度：$0\n共 $1 处",
+    "notes_set_type": "设置类型：$0\n共 $1 处",
+    "copy_notes": "复制音符共 $0 处",
+    "cut_notes": "剪切音符共 $0 处"
+  }
 }
