--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -115,6 +115,9 @@
     "notes_set_type": "设置类型：$0\n共 $1 处",
     "copy_notes": "复制音符共 $0 处",
     "cut_notes": "剪切音符共 $0 处",
-    "anno_background_reset": "背景重设完成。"
+    "anno_background_reset": "背景重设完成。",
+    "video_playback_error": "视频播放出现错误。",
+    "video_playback_file_not_exists": "视频文件不存在。\n[scale, 0.8]路径: ",
+    "video_playback_open_timeout": "加载视频文件超时。该视频文件可能不受支持。"
   }
 }
