feat: Detach info and timing's import
Fix an error in dym bpm change export

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -68,7 +68,9 @@
     "anno_chart_not_exists": "谱面文件不存在。导入中止。",
     "box_q_import_confirm": "确认导入谱面？所有操作将不可撤销。",
     "box_q_import_clear": "是否清除所有原谱面物件？",
-    "box_q_import_info": "是否导入谱面信息（标题、难度、Timing等）？",
+    "box_q_import_timing_reset": "是否清除所有原谱面 Timing 信息？",
+    "box_q_import_info": "是否导入谱面信息（标题、难度等）？",
+    "box_q_import_bpm": "是否导入 Timing 信息（BPM、Offset等）？",
     "anno_import_chart_complete": "导入谱面完毕。",
     "confirm_close": "确定要退出吗？所有未保存的进度将会丢失。",
     "anno_editside_switch": "编辑侧切换至",
