--- a/datafiles/lang/zh-TW.json
+++ b/datafiles/lang/zh-TW.json
@@ -2,134 +2,134 @@
   "lang": "zh-tw",
   "title": "繁體中文",
   "content": {
-    "title_new_project": "專案建立",
+    "title_new_project": "創建項目",
     "title_start_page": "開始頁面",
-    "button_project_create": "新建專案",
+    "button_project_create": "新建項目",
     "button_project_open": "打開已有項目",
     "button_goback": "返回上一頁",
-    "button_project_create_confirm": "建立專案",
+    "button_project_create_confirm": "創建項目",
     "input_music_file": "音樂文件 *",
     "input_bg_file": "背景文件",
-    "input_chart_file": "导入谱面文件",
-    "input_leftType": "左侧下落类型",
-    "input_rightType": "右侧下落类型",
-    "input_difficulty": "谱面难度",
-    "input_title": "谱面标题",
-    "input_title_desc": "请输入谱面标题",
-    "FMOD_load_err": "FMOD 未能正确加载。所有音乐相关功能将无法正常运作。请检查文件完整性。",
-    "FMOD_create_sys_err": "FMOD 创建系统失败。\n 错误信息: ",
-    "autosave_complete": "自动保存项目完毕。",
-    "autosave_enable": "自动保存已开启。",
-    "autosave_disable": "自动保存已关闭。",
-    "screenshot_save": "已保存截图到:",
+    "input_chart_file": "導入譜面文件",
+    "input_leftType": "左側下落類型",
+    "input_rightType": "右側下落類型",
+    "input_difficulty": "譜面難度",
+    "input_title": "譜面標題",
+    "input_title_desc": "請輸入譜面標題",
+    "FMOD_load_err": "FMOD 未能正確加載。所有音樂相關功能將無法正常運作。請檢查文件完整性。",
+    "FMOD_create_sys_err": "FMOD 創建系統失敗。\n 錯誤信息: ",
+    "autosave_complete": "自動保存項目完畢。",
+    "autosave_enable": "自動保存已開啟。",
+    "autosave_disable": "自動保存已關閉。",
+    "screenshot_save": "已保存截圖到:",
     "autoupdate_warn": "未收取到 DyNode 的任何正式版本。",
-    "autoupdate_err": "更新检查错误。请检查与 Github 页面的网络连通性。",
+    "autoupdate_err": "更新檢查錯誤。請檢查與 Github 頁面的網絡連通性。",
     "autoupdate_found_1": "收取到新版本 DyNode: ",
-    "autoupdate_found_2": "前往更新页面",
-    "anno_project_load_complete": "打开项目完毕。",
-    "anno_project_save_complete": "项目保存完毕。",
-    "anno_project_save_failed": "项目保存失败。",
+    "autoupdate_found_2": "前往更新頁面",
+    "anno_project_load_complete": "打開項目完畢。",
+    "anno_project_save_complete": "項目保存完畢。",
+    "anno_project_save_failed": "項目保存失敗。",
     "anno_prefix_warn": "警告",
     "anno_prefix_err": "錯誤",
     "anno_adjust_enabled": "開啟",
     "anno_adjust_disabled": "關閉",
-    "anno_debug_info": "除錯資訊",
-    "anno_show_bar": "以 Bar 代替 Time 显示",
-    "anno_show_bar_warn": "你还未设置全局 Bar Per Minute 与 Offset 。无法切换 Bar/Time 显示。\n使用 F6 即可进行设置。",
-    "anno_hide_scoreboard": "编辑模式下隐藏分数显示",
+    "anno_debug_info": "調試信息",
+    "anno_show_bar": "以 Bar 代替 Time 顯示",
+    "anno_show_bar_warn": "你還未設置全局 Bar Per Minute 與 Offset 。無法切換 Bar/Time 顯示。\n使用 F6 即可進行設置。",
+    "anno_hide_scoreboard": "編輯模式下隱藏分數顯示",
     "anno_particles_effect": "粒狀效果",
-    "anno_hitsound": "打击音",
-    "anno_switch_sidetype": "切换侧面类型至: ",
-    "anno_switch_sidetype_warn": "你只有正在编辑侧面才可以切换侧面类型。",
-    "anno_fade_other_notes": "透明化非编辑侧音符",
-    "anno_music_speed": "音乐倍速",
+    "anno_hitsound": "打擊音",
+    "anno_switch_sidetype": "切換側麵類型至: ",
+    "anno_switch_sidetype_warn": "你只有正在編輯側面才可以切換側麵類型。",
+    "anno_fade_other_notes": "透明化非編輯側音符",
+    "anno_music_speed": "音樂倍速",
     "anno_note_speed": "下落速度",
-    "anno_note_speed_warn": "你现在的下落速度为: x0.2。过低的下落速度可能导致严重的性能问题。",
-    "anno_switch_theme_to": "已切换到主题",
-    "anno_export_complete": "谱面导出完毕。",
-    "anno_export_failed": "谱面导出失败。",
-    "anno_music_load_complete": "音乐加载完毕。",
-    "old_version_warn_1": "检测到来自特定旧版本的项目。\n该谱面是否使用了从 .osu 中导入校时信息并添加了 64ms 的延迟？\n这个延迟在新的版本中建议被撤销。如果你选择“是”，则所有放置的 Note 和 Timing Point 都会被提前 64ms 。\n在调整之前我们建议你先对 .dyn 文件进行备份。你也可以在之后手动进行调整。\n这个警告不会出现第二遍。",
-    "new_project_warn": "确定要创建新的工程吗？所有未保存的更改都将丢失。",
-    "box_add_offset": "请输入你想要添加的全局时间偏移量（以毫秒记，正数代表增加延迟）。这将会影响所有的 Timing Points 和 Notes 所在的时间。",
-    "anno_add_offset_complete": "全局时间偏移添加完毕。",
-    "box_set_global_bar_1": "请输入自定义的全局 Bar Per Minute",
-    "box_set_global_bar_2": "请输入用于 Bar 显示与导出的全局 Offset （毫秒）",
-    "anno_set_global_bar_complete": "已更改全局 BarPM 与 Offset 至",
-    "anno_graph_not_exists": "图片文件不存在。\n[scale, 0.8]路径: ",
-    "anno_graph_load_err": "图片文件读取失败。图片可能过大或损坏。",
-    "anno_music_load_err": "音乐文件加载失败，可能原因为类型不支持或文件损坏。\nFMOD 错误信息: ",
-    "anno_import_info_complete": "导入谱面信息完毕。",
-    "box_set_chart_title": "请输入新的谱面标题",
-    "box_set_change_default_width": "请输入你想设置的默认宽度值",
-    "box_q_osu_import_objects": "是否导入 .osu 中的物件？（要进行转谱吗？）",
-    "box_q_clear_objects": "是否清除所有原谱面物件？此操作不可撤销！",
-    "box_q_import_dymm_bpm": "是否导入 Dynamaker Modified 谱面文件中的变 BPM 数据？",
-    "anno_chart_not_exists": "谱面文件不存在。导入中止。",
-    "box_q_import_confirm": "确认导入谱面？所有操作将不可撤销。",
-    "box_q_import_clear": "是否清除所有原谱面物件？",
-    "box_q_import_timing_reset": "是否清除所有原谱面 Timing 信息？",
-    "box_q_import_info": "是否导入谱面信息（标题、难度等）？",
-    "box_q_import_bpm": "是否导入 Timing 信息（BPM、Offset等）？",
-    "anno_import_chart_complete": "导入谱面完毕。",
-    "confirm_close": "确定要退出吗？所有未保存的进度将会丢失。",
-    "anno_editside_switch": "编辑侧切换至",
+    "anno_note_speed_warn": "你現在的下落速度為: x0.2。過低的下落速度可能導致嚴重的性能問題。",
+    "anno_switch_theme_to": "已切換到主題",
+    "anno_export_complete": "譜面導出完畢。",
+    "anno_export_failed": "譜面導出失敗。",
+    "anno_music_load_complete": "音樂加載完畢。",
+    "old_version_warn_1": "檢測到來自特定舊版本的項目。\n該譜面是否使用了從 .osu 中導入校時信息並添加了 64ms 的延遲？\n這個延遲在新的版本中建議被撤銷。如果你選擇“是”，則所有放置的 Note 和 Timing Point 都會被提前 64ms 。\n在調整之前我們建議你先對 .dyn 文件進行備份。你也可以在之後手動進行調整。\n這個警告不會出現第二遍。",
+    "new_project_warn": "確定要創建新的工程嗎？所有未保存的更改都將丟失。",
+    "box_add_offset": "請輸入你想要添加的全局時間偏移量（以毫秒記，正數代表增加延遲）。這將會影響所有的 Timing Points 和 Notes 所在的時間。",
+    "anno_add_offset_complete": "全局時間偏移添加完畢。",
+    "box_set_global_bar_1": "全局時間偏移添加完畢。",
+    "box_set_global_bar_2": "請輸入用於 Bar 顯示與導出的全局 Offset （毫秒）",
+    "anno_set_global_bar_complete": "已更改全局 BarPM 與 Offset 至",
+    "anno_graph_not_exists": "圖片文件不存在。\n[scale, 0.8]路徑: ",
+    "anno_graph_load_err": "圖片文件讀取失敗。圖片可能過大或損壞。",
+    "anno_music_load_err": "音樂文件加載失敗，可能原因為類型不支持或文件損壞。\nFMOD 錯誤信息: ",
+    "anno_import_info_complete": "導入譜面信息完畢。",
+    "box_set_chart_title": "請輸入新的譜面標題",
+    "box_set_change_default_width": "請輸入你想設置的默認寬度值",
+    "box_q_osu_import_objects": "是否導入 .osu 中的物件？ （要進行轉譜嗎？）",
+    "box_q_clear_objects": "是否清除所有原譜面物件？此操作不可撤銷！",
+    "box_q_import_dymm_bpm": "是否導入 Dynamaker Modified 譜面文件中的變 BPM 數據？",
+    "anno_chart_not_exists": "譜面文件不存在。導入中止。",
+    "box_q_import_confirm": "確認導入譜面？所有操作將不可撤銷。",
+    "box_q_import_clear": "是否清除所有原譜面物件？",
+    "box_q_import_timing_reset": "是否清除所有原譜面 Timing 信息？",
+    "box_q_import_info": "是否導入譜面信息（標題、難度等）？",
+    "box_q_import_bpm": "是否導入 Timing 信息（BPM、Offset等）？",
+    "anno_import_chart_complete": "譜面導入完畢。",
+    "confirm_close": "確定要退出嗎？所有未保存的進度將會丟失。",
+    "anno_editside_switch": "編輯側切換至",
     "editside_down": "正面",
-    "editside_left": "左侧",
-    "editside_right": "右侧",
-    "fileformat_chart": "支持的谱面文件",
-    "timing_point_create_with_note_question": "检测到你已经选择一个 Note，它的时间是: $0 ms。要以这个时间作为 offset 吗？",
-    "export_fix_decimal_question": "导出时是否将导出的所有音符时间对毫秒取整？\n使用该功能导出后的谱面将无法在再次导入后正常编辑。",
-    "export_to_dym_question": "是否导出用于 Dynamaker-modified 的相关信息？使用该选项导出的谱面仅能用于编辑器编辑。\n若选择“是”，所有已经设置的 Bar 信息将由 DyNode 以默认方式覆写。",
-    "export_timing_error": "你还没有配置 Timing ，因此无法导出谱面。",
-    "anno_simplify": "简化模式",
-    "default_width_mode_name_1": "宽度一致",
-    "default_width_mode_name_2": "视觉一致",
-    "default_width_mode_name_3": "正侧面分离",
-    "default_width_mode_name_4": "三面分离",
-    "default_width_mode": "宽度设置模式",
-    "anno_default_width": "设置默认宽度为",
-    "error_config_file_corrupted": "检测到配置文件损坏。将还原所有的配置为默认值。",
-    "anno_reload_config": "配置已重载。一部分配置可能需要重启游戏来生效。",
-    "start_page_hint": "F7: 切换无边框全屏\nF12: 查看全部快捷键\nDyNode目前仅支持1920x1080的渲染分辨率。",
-    "error_dym_note_load_failed": "导入谱面音符时出错，导入过程已终止。\n建议使用最新版本的 Dynamaker-modified 来导出谱面，你也可以选择向开发者反馈该错误。",
-    "error_dym_bpm_load_failed": "未能读取谱面中的变 BPM 信息。\n建议使用最新版本的 Dynamaker-modified 来导出谱面的变 BPM 数据。",
-    "error_default_width_must_be_real": "输入的默认宽度必须是一个实数。",
-    "undo": "撤销操作 共 $0 处",
-    "redo": "还原操作 共 $0 处",
-    "tpc_extra_question": "检测到你已经选择一个 Note，它的时间是: $0 ms。要以这个时间作为 offset 吗？",
-    "tpc_q1": "请输入该 Timing Point 的 offset（毫秒）: ",
-    "tpc_q2": "请输入 BPM : ",
-    "tpc_q3": "请输入节拍（x/4）: ",
-    "add_timing_point": "添加 Timing Point 至时间 $0 处\nBPM: $1\n节拍: $2/4",
-    "remove_timing_point": "删除位于时间 $0 处的 Timing Point\nBPM: $1\n节拍: $2/4",
-    "copy_timing_point": "复制末尾 Timing Point 至时间 $0 处\nBPM: $1\n节拍: $2/4",
-    "error_no_timing_point": "你没有设置任何 Timing Point 。需按 Y 键放置至少一个 Timing Point 。",
-    "beatline_divs": "节拍细分:  1/$0\n节拍细分组: $1",
-    "warning_note_outbound": "你正在放置一个中心超出屏幕的音符。\n该音符可能在屏幕内不可见，并且之后将因此无法编辑。\n你可以使用撤销来退回上一步操作。",
-    "copy_width": "复制宽度: $0",
-    "adjust_grid_y": "时间方向网格吸附",
-    "adjust_grid_x": "位置方向网格吸附",
-    "adjust_highlight": "时间/位置高亮显示",
-    "notes_mirror": "镜像音符共 $0 处",
-    "notes_mirror_copy": "镜像复制音符共 $0 处",
-    "notes_rotate": "侧面对称音符共 $0 处",
-    "warning_notes_rotate": "仅侧面音符能够被对称。",
-    "notes_rotate_copy": "侧面对称复制音符共 $0 处",
-    "warning_notes_rotate_copy": "仅侧面音符能够被对称复制。",
-    "notes_set_width": "设置宽度：$0\n共 $1 处",
-    "notes_set_type": "设置类型：$0\n共 $1 处",
-    "copy_notes": "复制音符共 $0 处",
-    "cut_notes": "剪切音符共 $0 处",
-    "anno_background_reset": "背景重设完成。",
-    "video_playback_error": "视频播放出现错误。",
-    "video_playback_file_not_exists": "视频文件不存在。\n[scale, 0.8]路径: ",
-    "video_playback_open_timeout": "加载视频文件超时。该视频文件可能不受支持。",
-    "video_load_finished": "视频加载完毕。",
-    "bar_calibration_question": "检测到谱面没有配置 Bar 。按照推荐的默认方式对谱面配置 Bar 吗？",
-    "bar_calibration_warning": "检测到谱面包含多个 Timing Point 。\nDyNode 将以第一个 Timing Point 为准对 Bar 进行配置。\nDyNode 目前不支持变 BPM 的 Bar 配置。",
-    "bar_calibration_complete": "已按照默认方式配置 Bar: \nBar Per Minute: $0\nBar Offset: $1",
-    "bar_reset_question": "你已经对谱面设置了 Bar。要删除 Bar 相关的配置吗？",
-    "bar_reset_complete": "Bar 设置已清除。"
+    "editside_left": "左側",
+    "editside_right": "右側",
+    "fileformat_chart": "支持的譜面文件",
+    "timing_point_create_with_note_question": "檢測到你已經選擇一個 Note，它的時間是: $0 ms。要以這個時間作為 offset 嗎？",
+    "export_fix_decimal_question": "導出時是否將導出的所有音符時間對毫秒取整？\n使用該功能導出後的譜面將無法在再次導入後正常編輯。",
+    "export_to_dym_question": "是否導出用於 Dynamaker-modified 的相關信息？使用該選項導出的譜面僅能用於編輯器編輯。\n若選擇“是”，所有已經設置的 Bar 信息將由 DyNode 以默認方式覆寫。",
+    "export_timing_error": "你還沒有配置 Timing ，因此無法導出譜面。",
+    "anno_simplify": "簡化模式",
+    "default_width_mode_name_1": "寬度一致",
+    "default_width_mode_name_2": "視覺一致",
+    "default_width_mode_name_3": "正側面分離",
+    "default_width_mode_name_4": "三面分離",
+    "default_width_mode": "寬度設置模式",
+    "anno_default_width": "設置默認寬度為",
+    "error_config_file_corrupted": "檢測到配置文件損壞。將還原所有的配置為默認值。",
+    "anno_reload_config": "配置已重載。一部分配置可能需要重啟遊戲來生效。",
+    "start_page_hint": "F7: 切換無邊框全屏\nF12: 查看全部快捷鍵\nDyNode目前僅支持1920x1080的渲染分辨率。",
+    "error_dym_note_load_failed": "導入譜面音符時出錯，導入過程已終止。\n建議使用最新版本的 Dynamaker-modified 來導出譜面，你也可以選擇向開發者反饋該錯誤。",
+    "error_dym_bpm_load_failed": "未能讀取譜面中的變 BPM 信息。\n建議使用最新版本的 Dynamaker-modified 來導出譜面的變 BPM 數據。",
+    "error_default_width_must_be_real": "輸入的默認寬度必須是一個實數。",
+    "undo": "撤銷操作 共 $0 處",
+    "redo": "還原操作 共 $0 處",
+    "tpc_extra_question": "檢測到你已經選擇一個 Note，它的時間是: $0 ms。要以這個時間作為 offset 嗎？",
+    "tpc_q1": "請輸入該 Timing Point 的 offset（毫秒）: ",
+    "tpc_q2": "請輸入 BPM : ",
+    "tpc_q3": "請輸入節拍（x/4）: ",
+    "add_timing_point": "添加 Timing Point 至時間 $0 處\nBPM: $1\n節拍: $2/4",
+    "remove_timing_point": "刪除位於時間 $0 處的 Timing Point\nBPM: $1\n節拍: $2/4",
+    "copy_timing_point": "複製末尾 Timing Point 至時間 $0 處\nBPM: $1\n節拍: $2/4",
+    "error_no_timing_point": "你沒有設置任何 Timing Point 。需按 Y 鍵放置至少一個 Timing Point 。",
+    "beatline_divs": "節拍細分:  1/$0\n節拍細分組: $1",
+    "warning_note_outbound": "你正在放置一個中心超出屏幕的音符。\n該音符可能在屏幕內不可見，並且之後將因此無法編輯。\n你可以使用撤銷來退回上一步操作。",
+    "copy_width": "複製寬度: $0",
+    "adjust_grid_y": "時間方向網格吸附",
+    "adjust_grid_x": "位置方向網格吸附",
+    "adjust_highlight": "時間/位置高亮顯示",
+    "notes_mirror": "鏡像音符共 $0 處",
+    "notes_mirror_copy": "鏡像複製音符共 $0 處",
+    "notes_rotate": "側面對稱音符共 $0 處",
+    "warning_notes_rotate": "僅側面音符能夠被對稱。",
+    "notes_rotate_copy": "側面對稱複製音符共 $0 處",
+    "warning_notes_rotate_copy": "僅側面音符能夠被對稱複製。",
+    "notes_set_width": "設置寬度：$0\n共 $1 處",
+    "notes_set_type": "設置類型：$0\n共 $1 處",
+    "copy_notes": "複製音符共 $0 處",
+    "cut_notes": "剪切音符共 $0 處",
+    "anno_background_reset": "背景重設完成。",
+    "video_playback_error": "視頻播放出現錯誤。",
+    "video_playback_file_not_exists": "視頻文件不存在。\n[scale, 0.8]路徑: ",
+    "video_playback_open_timeout": "加載視頻文件超時。該視頻文件可能不受支持。",
+    "video_load_finished": "視頻加載完畢。",
+    "bar_calibration_question": "檢測到譜面沒有配置 Bar 。按照推薦的默認方式對譜面配置 Bar 嗎？",
+    "bar_calibration_warning": "檢測到譜麵包含多個 Timing Point 。\nDyNode 將以第一個 Timing Point 為準對 Bar 進行配置。\nDyNode 目前不支持變 BPM 的 Bar 配置。",
+    "bar_calibration_complete": "已按照默認方式配置 Bar: \nBar Per Minute: $0\nBar Offset: $1",
+    "bar_reset_question": "你已經對譜面設置了 Bar。要刪除 Bar 相關的配置嗎？",
+    "bar_reset_complete": "Bar 設置已清除。"
   }
 }
