--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -130,6 +130,11 @@
     "bar_calibration_warning": "检测到谱面包含多个 Timing Point 。\nDyNode 将以第一个 Timing Point 为准对 Bar 进行配置。\nDyNode 目前不支持变 BPM 的 Bar 配置。",
     "bar_calibration_complete": "已按照默认方式配置 Bar: \nBar Per Minute: $0\nBar Offset: $1",
     "bar_reset_question": "你已经对谱面设置了 Bar。要删除 Bar 相关的配置吗？",
-    "bar_reset_complete": "Bar 设置已清除。"
+    "bar_reset_complete": "Bar 设置已清除。",
+    "beatline_style_default": "默认",
+    "beatline_style_mono": "单色",
+    "beatline_style_long": "等长",
+    "beatline_style_monolong": "经典",
+    "beatline_style": "拍线样式"
   }
 }
