feat: Add pitchShift effect switcher to topbar
Several tweaks on Input latency
New GUI Element "Checkbox"

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -146,6 +146,7 @@
     "credits": "Yet another Dynamix charting tool.\n\n[scale,1.2]by NagaseIori (NordLandeW)[scale,0.6]    [nord]\n\n[scale,1.2]繁体 / 英语翻译：Jmakxd[scale,0.6]    [jmak][/scale][/rainbow]\n\nDyNode 使用的大多数美术资源来自游戏 Dynamix ，由 C4Cat Entertainment Limited 制作。\n\nDyNode 以 MIT 许可协议进行许可。\n\nDyNode 使用 / 借鉴了以下项目的代码 / 资源 / 布局。\n\nScribble (under MIT License) Copyright (c) 2022 @jujuadams\n\nClean Shapes (under MIT License) Copyright (c) 2020 Juju Adams\n\nSNAP (under MIT License) Copyright (c) 2020 Juju Adams\n\nJSON (under MIT License) Copyright © 2013-2022 Niels Lohmann\n\ndelaunator-cpp (under MIT License) Copyright (c) 2018 Volodymyr Bilonenko\n\nFMODGMS (under BSD 2-Clause \"Simplified\" License) Copyright (c) 2016-2017, M.S.T.O.P.\n\nDynamaker-modifed (under MIT License) Copyright (c) 2021 jmakxd\n\nDynamaker (under MIT License) Copyright (c) 2019 omegaPi\n\nDynamix produced by C4Cat Entertainment Limited\n\nArcaea produced by lowiro limited\n",
     "tab_main_volume": "音乐音量",
     "tab_hitsound_volume": "打击音量",
-    "tab_bg_dim": "背景亮度"
+    "tab_bg_dim": "背景亮度",
+    "tab_pitchshift": "禁用变调（实验性）"
   }
 }
