--- a/datafiles/lang/en-US.json
+++ b/datafiles/lang/en-US.json
@@ -105,9 +105,9 @@
     "tpc_q1": "Please enter the offset for the Timing Point (milliseconds): ",
     "tpc_q2": "Please enter the BPM: ",
     "tpc_q3": "Please enter the beat (x/4): ",
-    "add_timing_point": "Add Timing Point at $0 ms\nBPM: $1\nBeat: $2/4",
-    "remove_timing_point": "Remove Timing Point at $0 ms\nBPM: $1\nBeat: $2/4",
-    "copy_timing_point": "Copy last Timing Point to $0 ms\nBPM: $1\nBeat: $2/4",
+    "add_timing_point": "Add Timing Point at $0 ms\nBPM: $1\nMeter: $2/4",
+    "remove_timing_point": "Remove Timing Point at $0 ms\nBPM: $1\nMeter: $2/4",
+    "copy_timing_point": "Copy last Timing Point to $0 ms\nBPM: $1\nMeter: $2/4",
     "error_no_timing_point": "No Timing Point set. Press Y to place at least one Timing Point.",
     "beatline_divs": "Beat Snap Divisor: 1/$0\nDivisor Group: $1",
     "warning_note_outbound": "You are placing a note whose center is off-screen. This note may not be visible and will be uneditable later. You can use undo to revert this action.",
