feat: Add timing point change function

--- a/datafiles/lang/en-US.json
+++ b/datafiles/lang/en-US.json
@@ -95,7 +95,7 @@
     "anno_default_width": "Set default width to",
     "error_config_file_corrupted": "Configuration file corrupted. All settings will be reset to defaults.",
     "anno_reload_config": "Configuration reloaded. Some settings may require a restart to take effect.",
-    "start_page_hint": "F7: Toggle borderless fullscreen\nF12: View all shortcuts\nDyNode currently only supports a rendering resolution of 1920x1080.",
+    "start_page_hint": "F7: Toggle borderless fullscreen\nF12: View all shortcuts / online documentation\nDyNode currently only supports a rendering resolution of 1920x1080.",
     "error_dym_note_load_failed": "Error occurred while importing chart notes, process terminated.\nRecommend using the latest version of Dynamaker-modified for exporting, or report this error to the developer.",
     "error_dym_bpm_load_failed": "Failed to read BPM information in the chart.\nRecommend using the latest version of Dynamaker-modified for accurate BPM data export.",
     "error_default_width_must_be_real": "The default width entered must be a real number.",
