--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -84,7 +84,7 @@
     "fileformat_chart": "支持的谱面文件",
     "timing_point_create_with_note_question": "检测到你已经选择一个 Note，它的时间是: $0 ms。要以这个时间作为 offset 吗？",
     "export_fix_decimal_question": "导出时是否将导出的所有音符时间对毫秒取整？\n使用该功能导出后的谱面将无法在再次导入后正常编辑。",
-    "export_fix_error_question": "是否对导出的谱面进行误差修正？\n该功能将误差在 2 毫秒内的音符对齐。",
+    "export_fix_error_question": "是否对导出的谱面进行误差修正？\n该功能将误差在 $0 毫秒内的音符对齐。",
     "export_to_dym_question": "是否导出用于 Dynamaker-modified 的相关信息？使用该选项导出的谱面仅能用于编辑器编辑。\n若选择“是”，所有已经设置的 Bar 信息将由 DyNode 以默认方式覆写。",
     "export_timing_error": "你还没有配置 Timing ，因此无法导出谱面。",
     "anno_simplify": "简化模式",
