--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -27,7 +27,8 @@
     "autoupdate_warn": "未收取到 DyNode 的任何正式版本。",
     "autoupdate_err": "更新检查错误。请检查与 Github 页面的网络连通性。",
     "autoupdate_found_1": "收取到新版本 DyNode: ",
-    "autoupdate_found_2": "前往更新页面",
+    "autoupdate_found_2": "前往发布页面",
+    "autoupdate_found_3": "更新",
     "anno_project_load_complete": "打开项目完毕。",
     "anno_project_save_complete": "项目保存完毕。",
     "anno_project_save_failed": "项目保存失败。",
