i18n: auto-update related texts

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -29,6 +29,12 @@
     "autoupdate_found_1": "收取到新版本 DyNode: ",
     "autoupdate_found_2": "前往发布页面",
     "autoupdate_found_3": "更新",
+    "autoupdate_process_1": "开始进行更新。",
+    "autoupdate_process_2": "开始获取更新文件。",
+    "autoupdate_process_3": "从首选源获取更新文件失败。开始从 Github 源获取更新文件。",
+    "autoupdate_process_4": "已准备好更新。稍后可关闭 DyNode 以继续进行更新。",
+    "autoupdate_process_err_1": "下载过程出现错误。更新中止。",
+    "autoupdate_process_err_2": "解压更新文件时出错。更新中止。",
     "anno_project_load_complete": "打开项目完毕。",
     "anno_project_save_complete": "项目保存完毕。",
     "anno_project_save_failed": "项目保存失败。",
