feat: Better update announcement

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -29,6 +29,10 @@
     "autoupdate_found_1": "收取到新版本 DyNode: ",
     "autoupdate_found_2": "前往发布页面",
     "autoupdate_found_3": "更新",
+    "autoupdate_found_4": "跳过此版本",
+    "autoupdate_found_5": "关闭更新提示",
+    "autoupdate_skip": "已跳过当前版本更新提示。",
+    "autoupdate_remove": "已关闭更新提示。你可以在config.json中重新开启更新提示。",
     "autoupdate_process_1": "开始进行更新。",
     "autoupdate_process_2": "开始获取更新文件。",
     "autoupdate_process_3": "从首选源获取更新文件失败。开始从 Github 源获取更新文件。",
