feat: Add auto-backup function

--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -20,7 +20,8 @@
     "input_title_desc": "请输入谱面标题",
     "FMOD_load_err": "FMOD 未能正确加载。所有音乐相关功能将无法正常运作。请检查文件完整性。",
     "FMOD_create_sys_err": "FMOD 创建系统失败。\n 错误信息: ",
-    "autosave_complete": "自动保存项目完毕。",
+    "autosave_complete": "自动保存项目完毕。项目文件已备份。",
+    "autosave_ineffective": "自动保存未生效。请至少手动保存一次项目来使自动保存功能生效。",
     "autosave_enable": "自动保存已开启。",
     "autosave_disable": "自动保存已关闭。",
     "screenshot_save": "已保存截图到:",
