--- a/datafiles/lang/zh-cn.json
+++ b/datafiles/lang/zh-cn.json
@@ -186,6 +186,7 @@
     "ops_name_settype": "修改音符类型",
     "ops_name_setwidth": "修改音符宽度",
     "ops_name_randomize": "随机化谱面",
+    "ops_name_duplicate": "复制音符",
     "version_higher": "DyNode 已更新到版本 $0。",
     "version_lower": "DyNode 已降级到版本 $0。\n回退到较旧版本的 DyNode 可能将丢失一些设置，且可能无法正常读取较新版本的谱面。"
   }
